Fixed the overlapped deal and restart text on button

--- a/style.css
+++ b/style.css
@@ -5,22 +5,31 @@ body {
     text-align: center;
     padding: 30px;
 }
-button {
-    padding: 20px 20px;
+.button-container{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 20px;
+}
+button#stay[disabled] {
+    /*hides stay button when disabled */
+    visibility: hidden;
+}
+button#deal, button#stay {
+    padding: 0;
     font-weight: bold;
     background: 
-    radial-gradient(circle at center, #a30000 70%, transparent 70%);
-
-    /*background: radial-gradient(circle at center, #ff4c4c 60%, #a30000 100%);*/
-    border: 4px solid white;
+    radial-gradient(circle at center, #a30000 100%);
+    border: none;
     border-radius: 50%;
     width: 120px;
     height: 120px;
     position: relative;
-    box-shadow: 0 0 10px #ff4c4c;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.6), inset 0 0 10px #fff3;
     text-transform: uppercase;
-    margin: 10px;
-    font-size: 18px;
+    font-size: 16px;
     color: white;
     cursor: pointer;
     overflow: hidden;
@@ -43,22 +52,34 @@ button::before {
         #ffeded 280deg 290deg, #a30000 290deg 300deg, #ffeded 300deg 310deg, #a30000 310deg 320deg, 
         #ffeded 320deg 330deg, #a30000 330deg 340deg, #ffeded 340deg 350deg, #a30000 350deg 360deg
     );
-    mask-image: radial-gradient(circle, transparent 0% 70%, black 70% 100%);
-    -webkit-mask-image: radial-gradient(circle, transparent 0% 70%, black 70% 100%);
+    mask: radial-gradient(circle, transparent 0% 70%, black 70% 100%);
+    -webkit-mask: radial-gradient(circle, transparent 0% 70%, black 70% 100%);
     pointer-events: none;
 }
-/*
-button::before {
-    transform: translateX(-50%);
-    top: 10px;
-    left: 50%;
-}
-    */
 button::after {
+    content: attr(data-label);
     position: absolute;
-    transform: translateX(-50%);
-    bottom: 10px;
+    top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    z-index: 1;
+    text-shadow: 0 0 2px black;
+    /*clicking on the button should go to the button */
+    pointer-events: none;
+    /*no selecting text on the button */
+    user-select: none;
+    /*no line breaks */
+    white-space: nowrap;
+}
+
+button:active, button:focus {
+    outline: none;
+    transform: none;
+    padding: 0;
+    font-size: 18px;
 }
 button div {
     position: absolute;
